<resources>
    <string name="app_name">Calyx Calculator</string>
    <string name="period">.</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_percentage">%</string>
    <string name="_0">0</string>
    <string name="pinned_currency_sample">GBP/EUR</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="multiplication">Multiplication</string>
    <string name="equal_to">Equal to</string>
    <string name="more_options">More options</string>
    <string name="add">add</string>
    <string name="divide">Divide</string>
    <string name="delete">Delete</string>
    <string name="multiply">multiply</string>
    <string name="minus">minus</string>
    <string name="calculator">Calculator</string>
    <string name="search">Search</string>
    <string name="pin">pin</string>
    <string name="pinned">Pinned</string>
    <string name="can_t_pin_more_than_4">Can’t pin more than 4</string>
    <string name="not_allowed_image">Not Allowed Image</string>
    <string name="dialog_message">You can’t pin more than 4 times, kindly unpin another to pin another selected currency.</string>
    <string name="dialog_ok">ok</string>
</resources>