<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="bottom"
    android:background="@color/background"
    android:gravity="bottom"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/output"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginStart="12dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="5dp"
        android:fontFamily="@font/montserrat"
        android:textAlignment="textEnd"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/_0"
        android:textAlignment="textEnd"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="48sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal">

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:itemCount="4"
            tools:listitem="@layout/single_pinned_currency_view" />

        <ImageButton
            android:id="@+id/button_more"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:background="@drawable/circle_button"
            android:fontFamily="@font/montserrat"
            android:src="@drawable/ic_more"
            android:contentDescription="@string/more_options"
            android:textColor="#ffff"
            android:textSize="20sp" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal">


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button7"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@drawable/circle_button"
                android:fontFamily="@font/montserrat"
                android:text="@string/_7"
                android:textColor="?attr/colorOnPrimary"
                android:textSize="28sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button8"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@drawable/circle_button"
                android:fontFamily="@font/montserrat"
                android:text="@string/_8"
                android:textColor="?attr/colorOnPrimary"
                android:textSize="28sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button9"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@drawable/circle_button"
                android:fontFamily="@font/montserrat"
                android:text="@string/_9"
                android:textColor="?attr/colorOnPrimary"
                android:textSize="28sp" />

            <ImageButton
                android:id="@+id/button_division"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@drawable/circle_button"
                android:fontFamily="@font/montserrat"
                android:src="@drawable/ic_divide"
                android:contentDescription="@string/divide"
                android:textColor="?attr/colorOnPrimary"
                android:textSize="28sp" />

            <ImageButton
                android:id="@+id/button_delete"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@drawable/circle_button"
                android:fontFamily="@font/montserrat"
                android:src="@drawable/ic_delete"
                android:contentDescription="@string/delete"
                android:textColor="?attr/colorOnPrimary"
                android:textSize="28sp" />

        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button4"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@drawable/circle_button"
                android:fontFamily="@font/montserrat"
                android:text="@string/_4"
                android:textColor="?attr/colorOnPrimary"
                android:textSize="28sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button5"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@drawable/circle_button"
                android:fontFamily="@font/montserrat"
                android:text="@string/_5"
                android:textColor="?attr/colorOnPrimary"
                android:textSize="28sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button6"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@drawable/circle_button"
                android:fontFamily="@font/montserrat"
                android:text="@string/_6"
                android:textColor="?attr/colorOnPrimary"
                android:textSize="28sp" />

            <ImageButton
                android:id="@+id/button_multiplication"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@drawable/circle_button"
                android:fontFamily="@font/montserrat"
                android:src="@drawable/ic_multiplication"
                android:contentDescription="@string/multiply"
                android:textSize="28sp"
                app:tint="?attr/colorOnPrimary"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_percentage"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@drawable/circle_button"
                android:fontFamily="@font/montserrat"
                android:text="@string/_percentage"
                android:textColor="#ffff"
                android:textSize="28sp" />


        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button1"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="80dp"
                    android:layout_margin="3dp"
                    android:layout_weight="1"
                    android:background="@drawable/circle_button"
                    android:fontFamily="@font/montserrat"
                    android:text="@string/_1"
                    android:textColor="?attr/colorOnPrimary"
                    android:textSize="28sp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button2"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="80dp"
                    android:layout_margin="3dp"
                    android:layout_weight="1"
                    android:background="@drawable/circle_button"
                    android:fontFamily="@font/montserrat"
                    android:text="@string/_2"
                    android:textColor="?attr/colorOnPrimary"
                    android:textSize="28sp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button3"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="80dp"
                    android:layout_margin="3dp"
                    android:layout_weight="1"
                    android:background="@drawable/circle_button"
                    android:fontFamily="@font/montserrat"
                    android:text="@string/_3"
                    android:textColor="?attr/colorOnPrimary"
                    android:textSize="28sp" />

                <ImageButton
                    android:id="@+id/button_subtraction"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="80dp"
                    android:layout_margin="3dp"
                    android:layout_weight="1"
                    android:background="@drawable/circle_button"
                    android:fontFamily="@font/montserrat"
                    android:src="@drawable/ic_subtraction"
                    android:contentDescription="@string/multiplication"
                    android:textColor="?attr/colorOnPrimary"
                    android:textSize="28sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button0"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_margin="3dp"
                    android:layout_weight="1"
                    android:background="@drawable/circle_button"
                    android:fontFamily="@font/montserrat"
                    android:text="@string/_0"
                    android:textColor="?attr/colorOnPrimary"
                    android:textSize="28sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/button_period"
                        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                        android:layout_width="wrap_content"
                        android:layout_height="80dp"
                        android:layout_margin="3dp"
                        android:layout_weight="1"
                        android:background="@drawable/circle_button"
                        android:fontFamily="@font/montserrat"
                        android:text="@string/period"
                        android:textColor="?attr/colorOnPrimary"
                        android:textSize="20sp" />

                    <ImageButton
                        android:id="@+id/button_add"
                        style="@style/Widget.MaterialComponents.Button.TextButton"
                        android:layout_width="wrap_content"
                        android:layout_height="80dp"
                        android:layout_margin="3dp"
                        android:layout_weight="1"
                        android:background="@drawable/circle_button"
                        android:fontFamily="@font/montserrat"
                        android:src="@drawable/ic_add"
                        android:contentDescription="@string/add"
                        app:tint="?attr/colorOnPrimary" />

                </LinearLayout>

            </LinearLayout>


        </LinearLayout>

        <ImageButton
            android:id="@+id/button_equal_to"
            android:layout_width="180dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/equal_button"
            android:fontFamily="@font/montserrat"
            android:src="@drawable/ic_equal_to"
            android:contentDescription="@string/equal_to"
            app:tint="?attr/colorOnPrimary" />

    </LinearLayout>

</LinearLayout>