<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?android:attr/colorBackground"
    >

    <ImageView
        android:id="@+id/dialog_not_allowed_image"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:src="@drawable/ic_bad"
        app:layout_constraintBottom_toBottomOf="@+id/dialog_title_text"
        app:layout_constraintEnd_toStartOf="@+id/dialog_title_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/dialog_title_text"
        android:contentDescription="@string/not_allowed_image" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/dialog_title_text"
        style="@style/MaterialAlertDialog.Material3.Title.Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="32dp"
        android:text="@string/can_t_pin_more_than_4"
        android:textSize="22sp"
        app:fontFamily="@font/montserrat"
        app:layout_constraintStart_toEndOf="@+id/dialog_not_allowed_image"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/dialog_message_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/dialog_message"
        android:textSize="16sp"
        app:fontFamily="@font/montserrat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/dialog_title_text"
        app:layout_constraintTop_toBottomOf="@+id/dialog_title_text" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/dialog_button_okay"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="?android:attr/textColor"
        android:text="@string/dialog_ok"
        android:textAllCaps="true"
        android:textColor="?android:attr/colorBackground"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialog_message_text" />
</androidx.constraintlayout.widget.ConstraintLayout>